# ifood-coupons-uplift

./: .gitignore  CLAUDE.md  README.md  config.yaml  index.html  main.py  post-delivery-notes.md  pyproject.toml
.cursor/skills/: statistical-plots
.github/workflows/: deploy-simulator-pages.yml
data/: holdout.json  metadata.json
notebooks/: 00_pipeline_review.ipynb  01_load_raw_data.ipynb  0_pipeline_audit.ipynb  1_1_exploratory_analysis.ipynb  1_2_clustering.ipynb  1_data_processing.ipynb  1_eda.ipynb  2_modeling.ipynb  3_clustering.ipynb  EDA_v2.ipynb
presentation/: Case Ifood - Atribuição de cupons.pptx
simulator/: README.md  __init__.py  export.py  index.html
simulator/data/: metadata.json  offers.json
specification/: 00-clarify.md  plan.md  schema-processed.md  schema-raw.md  spec.md  tasks.md  testing.md
src/: attribution.py  clean.py  cli.py  clustering.py  config.py  contract.py  cost.py  eda.py  features.py  gaincurve.py  io.py  main.py  model_baseline.py  models.py  pipeline.py  policy.py  quadrant.py  serve.py  split.py  tracking.py  uplift.py  uplift_eval.py  viz.py
tests/: conftest.py  modeling_fixtures.py  test_attribution.py  test_config.py  test_config_model.py  test_config_simulator.py  test_contract.py  test_cost.py  test_eda.py  test_gaincurve.py  test_integrity.py  test_label.py  test_leakage.py  test_model_baseline.py  test_models.py  test_parsing.py  test_policy.py  test_profile.py  test_quadrant.py  test_serve.py  test_simulator_export.py  test_split.py  test_uplift.py  test_uplift_eval.py  test_uplift_eval.py.tmp.51043.a9ba5a4f5234
(+15 files in other folders)
