[project]
name = "ifood-coupons-attribution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "causalml>=0.17.0",
    "llvmlite>=0.43",
    "numba>=0.60",
    "shap>=0.46",
    "pyspark>=3.5",
    "pydantic>=2.7",
    "pydantic-settings[yaml]>=2.2",
    "plotly>=5.22",
    "mlflow>=3.14.0",
    "scikit-uplift>=0.5.1",
]

[project.scripts]
coupons-uplift = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "simulator"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.2",
    "chispa>=0.10",
    "nbclient>=0.11.0",
    "nbformat>=5.10.4",
    "ipykernel>=7.3.0",
]
